<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="255dp"
        android:backgroundTint="#4DD0E1"
        android:ems="10"
        android:hint="@string/utilisateur"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#4DD0E1"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#4DD0E1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/connecter_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#4E4E4E"
        android:text="@string/se_connecter"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/username_edit"
        app:layout_constraintTop_toBottomOf="@+id/username_edit" />

    <TextView
        android:id="@+id/connexion_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="54dp"
        android:text="@string/connexion"
        android:textColor="#AAAAAA"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username_edit"
        app:layout_constraintEnd_toEndOf="@+id/username_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>